Fixed some inconsistencies

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <!--<img id="skill-blob" src="skill-blob.svg" > width="70%" height="70%">-->
             <img id="skill-img" src="images/skill_img.svg" width="50%" height="50%">
             
-            
+            <p id="hint" class="skill-row1">Click on a skill to know more</p>
             <div class="skill-row1">
                 <!--<div class="skill-row">-->
                     <p class="my-skills">Html/Css</p>
@@ -239,10 +239,10 @@
                 var javascript = "The basics of javascript like variable, scope, objects, arrays, loops, functions, conditionals and DOM are all covered. While I am still learning the more advanced concepts like OOP, asynchronous js and polymorphism. Among the vast number of js libraries, I have used jQuery. Working of various jQuery methods, animations and event handlers and how they are used to interact with html and css are thoroughly explored by me. "
                 var python = "Year long experience with various modules, libraries and APIs. Some of these are pygal and matplotlib for data visualization, beautifulsoup and selenium for web scraping, googleNews api for news fetching, GTK toolkit to build desktop app, layout building and full hands on with object oriented programming. Check out my work in progress project. "
                 var gimp = "GIMP is a free and open source cross-platform image editing program that is pretty close to photoshop in terms of features. Having used it for a while I can perform basic image-editing tasks like working with layers, cropping, rotating, applying filters, adding typography, setting lightning and color effects including exposure, white balance, contrast and saturation. Other than that I have also worked with SVGs and still currently exploring this skill."
-                var linux = "Linux should be rightly called GNU/Linux which is the OS, Linux is just the kernel. Actually there are many types of OSes called distributions under GNU/linux. Each is a combination of package-manager, desktop environment and many other things. I have used almost all the major distributions available, be it a rolling release or a long term support. I am also familiar with many FOSS apps of both CLI and GUI that work on GNU/Linux."
+                var linux = "There are many types of OSes called distributions under GNU/linux. Each is a combination of package-manager, desktop environment and many other things. I have used almost all the major distributions available for desktop, be it a rolling release or a long term support. I am also familiar with many FOSS apps of both CLI and GUI that work on GNU/Linux."
                 var shell = "There are many shells available out there like fish, zsh and bash. I personally use zsh as it allows plugins and themes that allow auto-completion and boost productivity. Scripting is very easy for me as it's just a combination of linux commands which I have gotten used to overtime"
                 var git = "I actively use git from CLI to manage my projects, thus all the git commands are on my fingertips. I have used all the features of git like branching/forking, merging pull requests and cloning repositories. "
-                var github = "The popular cloud based git hosting service is pretty much a GUI of git but with many extra features that even allow some level of automation. Although I don't use these advanced features as I am the sole developer of my projects, I am familiar with some of them like free static site hosting and markdown, which is used to create readme files or user description. "
+                var github = "The popular cloud based git hosting service is where I host all my projects which gives me familiriaty with many of its basic features. I have the knowledge of many collaborative features that are offered by github but I am yet to use them as I am the sole developer of my projects."
                 $('#popover-heading').text(selected)
                 if (selected == 'Html/Css') {
                     $('#progress-bar').delay(200).animate({width: "65%"}, {duration: 500, easing: "swing"});
