added linkedin profile

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <a href="https://github.com/krishh210"><div class="contact-box" id="github">
                         <img src="images/github.svg"><p>Github</p>
                     </div></a>
-                    <a href="#"><div class="contact-box" id="linkedin">
+                    <a href="www.linkedin.com/in/krishna-motwani-b295931bb"><div class="contact-box" id="linkedin">
                         <img src="images/linkedin.svg"><p>LinkedIn</p>
                     </div></a>
                 </div>
